--- a/bibliography.bib
+++ b/bibliography.bib
@@ -225,6 +225,14 @@
     doi = {10.1145/2909437.2909447}
 }
 
+@inproceedings{nakamura2017,
+    author = {Nakamura, Masahiro and Fukushima, Norishige},
+    title = {Fast Implementation of Box Filtering},
+    year = 2017,
+    month = jan,
+    booktitle = {Proceedings of the International Workshop on Advanced Image Technology (IWAIT)}
+}
+
 @manual{ultrascaleclb2017,
     author = {{Xilinx, Inc.}},
     title = {UltraScale Architecture Configurable Logic Block -- User Guide},
