--- a/einleitung.tex
+++ b/einleitung.tex
@@ -7,7 +7,7 @@ Grafikdarstellung (\gls{gpu}). Währenddessen verschwimmt bei Spielekonsolen und
 Laptops die Unterscheidung zwischen Haupt- und Grafikprozessoren dank
 integrierter Chips, die beide Funktionalitäten performant abdecken können
 (\gls{apu}). GPUs unterscheiden sich von CPUs vor allem durch einen
-spezifischeren Einsatzzweck: während CPUs vielfältige verschiedene
+spezifischeren Einsatzzweck: Während CPUs vielfältige verschiedene
 Anwendungen abdecken und diese parallel ausführen können (Taskparallelität),
 wurden GPUs vornehmlich für die möglichst schnelle und parallele Berechnung
 einer hohen Zahl von Bildpunkten konzipiert. Datenparallele Algorithmen -- also
@@ -77,7 +77,7 @@ schnellere Methoden für die inkrementelle Entwicklung zu wählen -- also z.B.
 Beschleuniger. Wünschenswert ist hier vor allem Portabilität zwischen den
 verschiedenen Hardware"=Plattformen.
 
-Das ist durchaus nicht unproblematisch: so waren in den Anfangsjahren des
+Das ist durchaus nicht unproblematisch: So waren in den Anfangsjahren des
 \gls{gpgpu} nur die Produkte des Herstellers NVIDIA ohne Umwege über
 Grafikschnittstellen programmierbar, erforderten dafür aber die Nutzung des
 erstmals 2006 erschienenen NVIDIA"=eigenen CUDA"=API. Dieses war (und ist)
