--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@
 \deftranslation[to=German]{Acronyms}{Abkürzungsverzeichnis}
 \deftranslation[to=German]{Glossary}{Glossar}
 \renewcommand*{\listlistingname}{Quelltextverzeichnis}
+\sisetup{locale = DE}
 
 % Einstellungen für minted
 \newenvironment{code}{\captionsetup{type=listing}}{}
@@ -80,6 +81,13 @@
             Matthias Werner, M.Sc.}
 \referee{Prof. Dr.-Ing. habil. Rainer G. Spallek \and
          Prof. Dr. rer. nat. Ulrich Schramm}
+
+\dedication{Für hilfreiche Antworten und Anregungen während der Implementierung
+            des Alpaka"=SYCL"=Backends bedanke ich mich herzlichst bei Herrn
+            René Widera. Großer Dank gebührt darüber hinaus Herrn Jonas Schenke,
+            der mir während der Arbeit mit dem \textit{jungfrau"=photoncounter}
+            noch in den tiefsten Abendstunden mit zahlreichen Ratschlägen zur
+            Seite stand.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Vorspann
