--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \usepackage{multirow}
 \usepackage{nth}
 \usepackage{pdfpages}
+\usepackage{pgfplots}
 \usepackage{selinput}
 \usepackage[binary-units]{siunitx}
 \usepackage{tablefootnote}
